<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
            android:id="@+id/imageDocIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_courses_photo"
            android:contentDescription="@string/course_image" />


    <TextView
            android:id="@+id/textViewCourseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="4dp"
            android:layout_toEndOf="@+id/imageDocIcon"
            android:singleLine="true"
            android:text="@string/test_class_name"
            android:textColor="@color/list_item_text"
            android:textSize="@dimen/standard_text" />


    <LinearLayout
            android:id="@+id/datesLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textViewCourseName"
            android:layout_toEndOf="@+id/imageDocIcon"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/textViewCourseStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="4dp"
                android:text="@string/start_date" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="4dp"
                android:text="@string/dash_test" />

        <TextView
                android:id="@+id/textViewCourseEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="4dp"
                android:text="@string/end_date" />

    </LinearLayout>

    <TextView
            android:id="@+id/textViewCourseStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageDocIcon"
            android:layout_marginTop="16dp"
            android:layout_marginStart="55dp"
            android:layout_marginBottom="8dp"
            android:text="@string/status_example_test" />
</RelativeLayout>