<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp">

    <ImageView
            android:id="@+id/imageDocIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_term_photo"
            android:contentDescription="@string/term_status_indicator" />


    <TextView
        android:id="@+id/textViewTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/imageDocIcon"
        android:maxLines="1"
        android:text="@string/test_term_name"
        android:textColor="@color/list_item_text"
        android:textSize="@dimen/standard_text" />


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textViewTerm"
            android:layout_toEndOf="@+id/imageDocIcon">

        <TextView
            android:id="@+id/textViewTermStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="4dp"
            android:text="@string/startdate_test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:text="@string/dash_test" />

            <TextView
                android:id="@+id/textViewTermEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:text="@string/enddate_test" />

    </LinearLayout>

</RelativeLayout>