<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:id="@+id/imageDocIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_query_builder_black_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/course_status_indicator" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/imageDocIcon">


        <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/linearLayout"
                android:layout_height="match_parent"
                >

            <TextView
                    android:id="@+id/textViewAssessmentCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/test_course_number"
                    android:textSize="@dimen/standard_text" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/colon_test_assessment"
                    android:textSize="@dimen/standard_text" />

            <TextView
                    android:id="@+id/textViewAssessmentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/test_assessment_name"
                    android:textColor="@color/list_item_text"
                    android:textSize="@dimen/standard_text"/>
        </LinearLayout>

        <TextView
                android:text="@string/assessment_list_test_date"
                android:layout_width="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAssessmentDatetime" />
    </LinearLayout>

</RelativeLayout>