<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.mmarvive.wgumobileproject.coursepackage.CourseEditorActivity"
                tools:showIn="@layout/activity_course_editor">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/gridLayout">


        <TextView
                android:id="@+id/textViewCourseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="0"
                android:textSize="@dimen/small_text"
                android:text="@string/course_name" />

        <EditText
                android:id="@+id/editTextCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="0"
                android:ems="10"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor"/>

        <TextView
                android:id="@+id/textViewCourseStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="1"
                android:textSize="@dimen/small_text"
                android:text="@string/course_start" />

        <EditText
                android:id="@+id/editTextCourseStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="1"
                android:inputType="date"
                tools:ignore="Autofill,LabelFor"/>

        <TextView
                android:id="@+id/textViewCourseEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="2"
                android:textSize="@dimen/small_text"
                android:text="@string/course_end" />

        <EditText
                android:id="@+id/editTextCourseEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="2"
                android:inputType="date"
                tools:ignore="Autofill,LabelFor"/>

        <TextView
                android:id="@+id/textViewCourseMentor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="3"
                android:textSize="@dimen/small_text"
                android:text="@string/course_mentor" />

        <EditText
                android:id="@+id/editTextCourseMentor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="3"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor"/>

        <TextView
                android:id="@+id/textViewCourseMentorPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="4"
                android:textSize="@dimen/small_text"
                android:text="@string/course_mentor_phone" />

        <EditText
                android:id="@+id/editTextCourseMentorPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="4"
                android:inputType="phone"
                tools:ignore="Autofill,LabelFor"/>

        <TextView
                android:id="@+id/textViewCourseMentorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="5"
                android:textSize="@dimen/small_text"
                android:text="@string/course_mentor_email" />

        <EditText
                android:id="@+id/editTextCourseMentorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="5"
                android:inputType="textWebEmailAddress"
                tools:ignore="Autofill,LabelFor"/>

    </GridLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_course"
            android:id="@+id/button"
            android:layout_below="@+id/gridLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:onClick="saveCourseChanges" />


</RelativeLayout>